Bug 1840665 - part 2: Use Geckoview from this try push:
https://treeherder.mozilla.org/jobs?repo=try&revision=defd5b4fd3d089c6fee9e936f5130571e8743b6e

--- a/android-components/components/browser/session-storage/build.gradle
+++ b/android-components/components/browser/session-storage/build.gradle
@@ -5,6 +5,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+repositories {
+    maven {
+        name "Taskcluster Nightly"
+        url "https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/SFnB2mLHSn2VmHsPTrNP9A/runs/0/artifacts/public/build/maven"
+    }
+}
+
 android {
     compileSdkVersion config.compileSdkVersion
 
