--- a/android-components/samples/compose-browser/build.gradle
+++ b/android-components/samples/compose-browser/build.gradle
@@ -6,6 +6,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 
+repositories {
+    maven {
+        name "Taskcluster Nightly"
+        url "https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/SFnB2mLHSn2VmHsPTrNP9A/runs/0/artifacts/public/build/maven"
+    }
+}
+
 android {
     compileSdkVersion config.compileSdkVersion
 
