--- a/fenix/app/build.gradle
+++ b/fenix/app/build.gradle
@@ -22,6 +22,13 @@ import static org.gradle.api.tasks.testing.TestResult.ResultType
 
 apply from: 'benchmark.gradle'
 
+repositories {
+    maven {
+        name "Taskcluster Nightly"
+        url "https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/SFnB2mLHSn2VmHsPTrNP9A/runs/0/artifacts/public/build/maven"
+    }
+}
+
 android {
     compileSdkVersion Config.compileSdkVersion
 
