Bug 1840665 - part 5: Build fenix-release APK on git-push (otherwise we cannot sign it)

--- a/taskcluster/ci/build-apk/kind.yml
+++ b/taskcluster/ci/build-apk/kind.yml
@@ -154,7 +154,8 @@ tasks:
             shipping-product: fenix
         dependencies:
             external-gradle-dependencies: external-gradle-dependencies-fenix
-        run-on-tasks-for: []
+        run-on-tasks-for:
+            - github-push
         include-shippable-secrets: true
         include-release-version: true
         run:
@@ -162,7 +163,7 @@ tasks:
             gradle-build-name: fenixRelease
             gradle-build: fenix
             track-apk-size: true
-        shipping-phase: promote
+        shipping-phase: build
         source-project-name: "fenix"
         treeherder:
             symbol: fenix-release(Bf)
